[gd_scene load_steps=26 format=2]

[ext_resource path="res://Opening.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/MSc9RH.jpg" type="Texture" id=2]
[ext_resource path="res://Level1Tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Sprites/Player/wizardIdle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Other/AlternateOldMan.png" type="Texture" id=5]
[ext_resource path="res://Fonts/javatext.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Text1.gd" type="Script" id=7]
[ext_resource path="res://Text2.gd" type="Script" id=8]
[ext_resource path="res://Text3.gd" type="Script" id=9]
[ext_resource path="res://Text4.gd" type="Script" id=10]
[ext_resource path="res://Text5.gd" type="Script" id=11]
[ext_resource path="res://Text6.gd" type="Script" id=12]
[ext_resource path="res://Text7.gd" type="Script" id=13]
[ext_resource path="res://Text8.gd" type="Script" id=14]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=15]
[ext_resource path="res://FadeOut.tscn" type="PackedScene" id=16]
[ext_resource path="res://Music/The_Little_Big_Adventure_.ogg" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="Opening" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="Sprite" parent="."]
position = Vector2( 144, 304 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="OldMan" type="Sprite" parent="."]
position = Vector2( 496, 304 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 96.0
margin_right = 608.0
margin_bottom = 192.0

[node name="Text1" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Thank you for agreeing to meet me here, Billy."
percent_visible = 0.0
script = ExtResource( 7 )

[node name="Text2" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "You have done well to make it this far, Billy."
percent_visible = 0.0
script = ExtResource( 8 )

[node name="Text3" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "You have studied hard and overcome many hardships..."
percent_visible = 0.0
script = ExtResource( 9 )

[node name="Text4" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "but your journey is far from over."
percent_visible = 0.0
script = ExtResource( 10 )

[node name="Text5" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 5 )
text = "Now you must collect three potions: the blue potion of courage, 
the yellow potion of strength, and the red potion of desire."
percent_visible = 0.0
script = ExtResource( 11 )

[node name="Text6" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 6 )
text = "Your journey will be perilous, but you must not falter."
percent_visible = 0.0
script = ExtResource( 12 )

[node name="Text7" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 7 )
text = "Use the left and right arrow keys to move, as well as the up arrow key to
jump over any obstacles you may encounter."
percent_visible = 0.0
script = ExtResource( 13 )

[node name="Text8" type="Label" parent="Panel"]
margin_left = 32.0
margin_top = 14.0
margin_right = 544.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 8 )
text = "Good luck, and always remember that the magic is within."
percent_visible = 0.0
script = ExtResource( 14 )

[node name="FadeIn" parent="." instance=ExtResource( 15 )]
visible = false

[node name="FadeOut" parent="." instance=ExtResource( 16 )]

[node name="Timer1" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 6.5
one_shot = true

[node name="Timer7" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer8" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Timer9" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true
[connection signal="fade_out_finished" from="FadeOut" to="." method="_on_FadeOut_fade_out_finished"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
[connection signal="timeout" from="Timer9" to="." method="_on_Timer9_timeout"]
